--- a/node9.html
+++ b/node9.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html933"
+<A NAME="tex2html936"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html927"
+<A NAME="tex2html930"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html921"
+<A NAME="tex2html924"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html929"
+<A NAME="tex2html932"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html931"
+<A NAME="tex2html934"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html934"
+<B> Sig:</B> <A NAME="tex2html937"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html928"
+<B>Sup:</B> <A NAME="tex2html931"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html922"
+<B> Ant:</B> <A NAME="tex2html925"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 <B> Con:</B> 
-<A NAME="tex2html929"
+<A NAME="tex2html932"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html931"
+<A NAME="tex2html934"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,54 +103,56 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html935"
-  HREF="node9.html#SECTION04120010000000000000">index.html</A>
-<LI><A NAME="tex2html936"
-  HREF="node9.html#SECTION04120020000000000000">global.css</A>
-<LI><A NAME="tex2html937"
-  HREF="node9.html#SECTION04120030000000000000">Sintáxis CSS</A>
 <LI><A NAME="tex2html938"
-  HREF="node9.html#SECTION04120040000000000000">Selectores en CSS</A>
+  HREF="node9.html#SECTION04120010000000000000">index.html</A>
 <LI><A NAME="tex2html939"
-  HREF="node9.html#SECTION04120050000000000000">CSS reset</A>
+  HREF="node9.html#SECTION04120020000000000000">global.css</A>
 <LI><A NAME="tex2html940"
-  HREF="node9.html#SECTION04120060000000000000">El Modelo de Caja</A>
+  HREF="node9.html#SECTION04120030000000000000">Sintáxis CSS</A>
 <LI><A NAME="tex2html941"
-  HREF="node9.html#SECTION04120070000000000000">Editing CSS styles in Chrome using various DevTools aid</A>
+  HREF="node9.html#SECTION04120040000000000000">Selectores en CSS</A>
 <LI><A NAME="tex2html942"
-  HREF="node9.html#SECTION04120080000000000000">Block versus Inline</A>
+  HREF="node9.html#SECTION04120050000000000000">CSS reset</A>
 <LI><A NAME="tex2html943"
-  HREF="node9.html#SECTION04120090000000000000">Propiedades CSS</A>
+  HREF="node9.html#SECTION04120060000000000000">El Modelo de Caja</A>
 <LI><A NAME="tex2html944"
-  HREF="node9.html#SECTION041200100000000000000">temperature.js</A>
+  HREF="node9.html#SECTION04120070000000000000">Editing CSS styles in Chrome using various DevTools aid</A>
 <LI><A NAME="tex2html945"
-  HREF="node9.html#SECTION041200110000000000000">Despliegue</A>
+  HREF="node9.html#SECTION04120080000000000000">Block versus Inline</A>
 <LI><A NAME="tex2html946"
-  HREF="node9.html#SECTION041200120000000000000">Creando un fichero package.json</A>
+  HREF="node9.html#SECTION04120090000000000000">Propiedades CSS</A>
 <LI><A NAME="tex2html947"
-  HREF="node9.html#SECTION041200130000000000000">Pruebas: Mocha y Chai</A>
+  HREF="node9.html#SECTION041200100000000000000">temperature.js</A>
 <LI><A NAME="tex2html948"
-  HREF="node9.html#SECTION041200140000000000000">Pruebas: Estructura</A>
+  HREF="node9.html#SECTION041200110000000000000">Despliegue</A>
 <LI><A NAME="tex2html949"
-  HREF="node9.html#SECTION041200150000000000000">Pruebas: <TT>index.html</TT></A>
+  HREF="node9.html#SECTION041200120000000000000">Creando un fichero package.json</A>
 <LI><A NAME="tex2html950"
-  HREF="node9.html#SECTION041200160000000000000">Pruebas: Añadir los tests</A>
+  HREF="node9.html#SECTION041200130000000000000">Pruebas: Mocha y Chai</A>
 <LI><A NAME="tex2html951"
-  HREF="node9.html#SECTION041200170000000000000">Chai Assert Style</A>
+  HREF="node9.html#SECTION041200140000000000000">Pruebas: Estructura</A>
 <LI><A NAME="tex2html952"
-  HREF="node9.html#SECTION041200180000000000000">Assert API</A>
+  HREF="node9.html#SECTION041200150000000000000">Pruebas: <TT>index.html</TT></A>
 <LI><A NAME="tex2html953"
-  HREF="node9.html#SECTION041200190000000000000">Ejecución Simple</A>
+  HREF="node9.html#SECTION041200160000000000000">Pruebas: Añadir los tests</A>
 <LI><A NAME="tex2html954"
-  HREF="node9.html#SECTION041200200000000000000">Manejando tareas en JS: Gulp</A>
+  HREF="node9.html#SECTION041200170000000000000">Chai Assert Style</A>
 <LI><A NAME="tex2html955"
-  HREF="node9.html#SECTION041200210000000000000">Pruebas: Véase</A>
+  HREF="node9.html#SECTION041200180000000000000">Assert API</A>
+<LI><A NAME="tex2html956"
+  HREF="node9.html#SECTION041200190000000000000">Ejecución Simple</A>
+<LI><A NAME="tex2html957"
+  HREF="node9.html#SECTION041200200000000000000">Manejando tareas en JS: Gulp</A>
+<LI><A NAME="tex2html958"
+  HREF="node9.html#SECTION041200210000000000000">Karma</A>
+<LI><A NAME="tex2html959"
+  HREF="node9.html#SECTION041200220000000000000">Pruebas: Véase</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2711"></A>
+   <A NAME="2716"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -345,7 +347,7 @@ The <code>onchange</code> event occurs when the value of an element has been cha
  &lt;link href="global.css" rel="stylesheet" type="text/css"&gt;
 </PRE>
 </LI>
-<LI><A NAME="2716"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2718"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
+<LI><A NAME="2721"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2723"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
 </LI>
 </UL>
 
@@ -396,25 +398,25 @@ Sintáxis CSS</A>
 <PRE>
 th, td      { vertical-align: top; text-align: right; font-size:large; }     /* Don't center table cells  */
 </PRE>
-What you see above is referred to as a <A NAME="2728"></A><SPAN  CLASS="textit">rule set</SPAN>. 
+What you see above is referred to as a <A NAME="2733"></A><SPAN  CLASS="textit">rule set</SPAN>. 
 
 <P>
 
 <UL>
 <LI>Notice the curly braces. Also, notice that each declaration inside the curly braces has a semicolon. Everything
-inside the curly braces is called a <A NAME="2730"></A><SPAN  CLASS="textit">declaration block</SPAN>.
+inside the curly braces is called a <A NAME="2735"></A><SPAN  CLASS="textit">declaration block</SPAN>.
 </LI>
-<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2732"></A><SPAN  CLASS="textit">selector</SPAN>.
+<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2737"></A><SPAN  CLASS="textit">selector</SPAN>.
 
 <P>
 Here we're using commas to separate our selectors <code>th</code> and <code>td</code>. 
 This is a useful method to use to combine multiple selectors in a single rule set. 
 In this case, the styles will apply to all <code>&lt;th&gt;</code> and <code>&lt;td&gt;</code> elements,
 </LI>
-<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2734"></A><SPAN  CLASS="textit">declaration</SPAN>. 
+<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2739"></A><SPAN  CLASS="textit">declaration</SPAN>. 
 </LI>
-<LI>Additionally, each declaration consists of a <A NAME="2736"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
-and a <A NAME="2738"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
+<LI>Additionally, each declaration consists of a <A NAME="2741"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
+and a <A NAME="2743"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
 </LI>
 <LI>Each CSS declaration ends with a semicolon.
 </LI>
@@ -538,7 +540,7 @@ a:hover {
    color: red;
 }
 </PRE>
-¿Que porción del selector es conocido como <A NAME="2744"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
+¿Que porción del selector es conocido como <A NAME="2749"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
 ¿Cuando se aplica la regla a un ancla <code>&lt;a&gt;</code>?
 </LI>
 <LI>Exprese con palabras a que elementos del documento se aplicará la siguiente regla:
@@ -596,7 +598,7 @@ For example, if you use an un-ordered list (the <code>&lt;ul&gt;</code> element)
 formatting styles, including bullets next to the individual list items (the <code>&lt;li&gt;</code> elements inside the <code>&lt;ul&gt;</code>). 
 
 <P>
-By using a <A NAME="2750"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
+By using a <A NAME="2755"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
 to a bare minimum. 
 
 <P>
@@ -621,7 +623,7 @@ El Modelo de Caja</A>
   
 
 <P>
-The <A NAME="2756"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
+The <A NAME="2761"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
 
 <P>
 
@@ -630,7 +632,7 @@ The <A NAME="2756"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usua
 <P>
 
 <UL>
-<LI><A NAME="2758"></A><SPAN  CLASS="textbf">Content</SPAN> 
+<LI><A NAME="2763"></A><SPAN  CLASS="textbf">Content</SPAN> 
 
 <P>
 The content portion of the box model holds the actual content. 
@@ -641,7 +643,7 @@ whatever else is visible on a web page.
 
 <P>
 </LI>
-<LI><A NAME="2760"></A><SPAN  CLASS="textbf">Padding</SPAN>
+<LI><A NAME="2765"></A><SPAN  CLASS="textbf">Padding</SPAN>
 
 <P>
 The <code>padding</code> of an element is defined using the <code>padding</code> property. The <code>padding</code> is the space around the content. 
@@ -653,7 +655,7 @@ for all four sides in one declaration
 <code>padding: 20px 10px 30px 20px</code>, for instance. 
 
 <P>
-When declaring all four sides, you’re using a <A NAME="2762"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
+When declaring all four sides, you’re using a <A NAME="2767"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
 
 <P>
 Often when a CSS property takes multiple values like this, 
@@ -665,7 +667,7 @@ top, <code>10px</code> to the right, <code>30px</code> to the bottom, and <code>
 See <A NAME="tex2html30"
   HREF="http://www.w3schools.com/css/css_padding.asp">padding examples at w3schools</A>.
 </LI>
-<LI><A NAME="2766"></A><SPAN  CLASS="textbf">Border</SPAN> 
+<LI><A NAME="2771"></A><SPAN  CLASS="textbf">Border</SPAN> 
 
 <P>
 The border of an element is defined using the border property. 
@@ -679,7 +681,7 @@ border: 4px dashed orange.
 
 <P>
 </LI>
-<LI><A NAME="2770"></A><SPAN  CLASS="textbf">Margin</SPAN> 
+<LI><A NAME="2775"></A><SPAN  CLASS="textbf">Margin</SPAN> 
 
 <P>
 Margins are similar to padding, and are defined using similar syntax 
@@ -782,7 +784,7 @@ Block versus Inline</A>
   
 
 <P>
-HTML elements fall under two categories: <A NAME="2782"></A><SPAN  CLASS="textbf">block</SPAN> or <A NAME="2784"></A><SPAN  CLASS="textbf">inline</SPAN>.
+HTML elements fall under two categories: <A NAME="2787"></A><SPAN  CLASS="textbf">block</SPAN> or <A NAME="2789"></A><SPAN  CLASS="textbf">inline</SPAN>.
 
 <P>
 
@@ -1249,7 +1251,7 @@ Chai Assert Style</A>
   
 
 <P>
-The <A NAME="2825"></A><SPAN  CLASS="textbf">assert style</SPAN> is exposed through assert interface. 
+The <A NAME="2830"></A><SPAN  CLASS="textbf">assert style</SPAN> is exposed through assert interface. 
 
 <P>
 This provides the classic assert-dot notation, similiar to that packaged with node.js. 
@@ -1306,7 +1308,7 @@ Manejando tareas en JS: Gulp</A>
   
 
 <P>
-Why would you want to use a <A NAME="2839"></A><SPAN  CLASS="textbf">task runner</SPAN>? 
+Why would you want to use a <A NAME="2844"></A><SPAN  CLASS="textbf">task runner</SPAN>? 
 
 <P>
 They’re small applications that automate often time consuming and boring tasks. 
@@ -1507,6 +1509,13 @@ at <code>gulpjs/gulp</code>.
 <P>
 
 <H4><A NAME="SECTION041200210000000000000">
+Karma</A>
+</H4>
+  
+
+<P>
+
+<H4><A NAME="SECTION041200220000000000000">
 Pruebas: Véase</A>
 </H4>
   
@@ -1527,24 +1536,31 @@ el testing framework Mocha y  Chai en el repositorio
   HREF="http://www.kenpowers.net/blog/testing-in-browsers-and-node/">Testing in Browsers and Node with Mocha, Chai, Sinon, and Testem
 </A>
 </LI>
+<LI><A NAME="tex2html51"
+  HREF="https://egghead.io/lessons/unit-testing-introduction-to-karma">Introduction to Karma</A>
+Screencast.
+</LI>
+<LI><A NAME="tex2html52"
+  HREF="http://youtu.be/MVw8N3hTfCI">Vojta Jina: Testacular (now Karma) - JavaScript test runner</A>. YouTube.
+</LI>
 </UL>
 
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html933"
+<A NAME="tex2html936"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html927"
+<A NAME="tex2html930"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html921"
+<A NAME="tex2html924"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html929"
+<A NAME="tex2html932"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html931"
+<A NAME="tex2html934"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -1584,11 +1600,11 @@ el testing framework Mocha y  Chai en el repositorio
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html934"
+<B> Sig:</B> <A NAME="tex2html937"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html928"
+<B>Sup:</B> <A NAME="tex2html931"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html922"
+<B> Ant:</B> <A NAME="tex2html925"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 </DIV>
 <!--End of Navigation Panel-->
