--- a/node11.html
+++ b/node11.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html982"
+<A NAME="tex2html983"
   HREF="node12.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html976"
+<A NAME="tex2html977"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html970"
+<A NAME="tex2html971"
   HREF="node10.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html978"
+<A NAME="tex2html979"
   HREF="node90.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html980"
+<A NAME="tex2html981"
   HREF="node93.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html983"
+<B> Sig:</B> <A NAME="tex2html984"
   HREF="node12.html">Comentarios y Consejos</A>
-<B>Sup:</B> <A NAME="tex2html977"
+<B>Sup:</B> <A NAME="tex2html978"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html971"
+<B> Ant:</B> <A NAME="tex2html972"
   HREF="node10.html">Práctica: Conversor de Temperaturas</A>
 <B> Con:</B> 
-<A NAME="tex2html978"
+<A NAME="tex2html979"
   HREF="node90.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html980"
+<A NAME="tex2html981"
   HREF="node93.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,22 +103,24 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html984"
-  HREF="node11.html#SECTION04140010000000000000">Donde</A>
 <LI><A NAME="tex2html985"
-  HREF="node11.html#SECTION04140020000000000000">Introducción al formato CSV</A>
+  HREF="node11.html#SECTION04140010000000000000">Donde</A>
 <LI><A NAME="tex2html986"
-  HREF="node11.html#SECTION04140030000000000000">Ejemplo de ejecución</A>
+  HREF="node11.html#SECTION04140020000000000000">Introducción al formato CSV</A>
 <LI><A NAME="tex2html987"
-  HREF="node11.html#SECTION04140040000000000000">Aproximación al análisis mediante expresiones regulares de CSV</A>
+  HREF="node11.html#SECTION04140030000000000000">Ejemplo de ejecución</A>
 <LI><A NAME="tex2html988"
-  HREF="node11.html#SECTION04140050000000000000">Tareas</A>
+  HREF="node11.html#SECTION04140040000000000000">Aproximación al análisis mediante expresiones regulares de CSV</A>
+<LI><A NAME="tex2html989"
+  HREF="node11.html#SECTION04140050000000000000">index.html</A>
+<LI><A NAME="tex2html990"
+  HREF="node11.html#SECTION04140060000000000000">Tareas</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
 
 <H1><A NAME="SECTION04140000000000000000"></A>
-   <A NAME="3164"></A>
+   <A NAME="3167"></A>
   
 <A NAME="sectionpractica:csv"></A>
 <BR>
@@ -528,6 +530,41 @@ console.log(f2c(arg));
 <P>
 
 <H4><A NAME="SECTION04140050000000000000">
+index.html</A>
+</H4>
+  
+
+<PRE>
+&lt;html&gt;
+  &lt;head&gt;
+     &lt;meta http-equiv="Content-Type" content="text/html; charset=UTF-8"&gt;
+     &lt;title&gt;CSV Analyzer&lt;/title&gt;
+     &lt;link href="global.css" rel="stylesheet" type="text/css"&gt;
+
+     &lt;script type="text/javascript" src="../../underscore/underscore.js"&gt;&lt;/script&gt;
+     &lt;script type="text/javascript" src="../../jquery/starterkit/jquery.js"&gt;&lt;/script&gt;
+     &lt;script type="text/javascript" src="csv.js"&gt;&lt;/script&gt;
+  &lt;/head&gt;
+  &lt;body&gt;
+    &lt;h1&gt;Comma Separated Value Analyzer&lt;/h1&gt;
+    &lt;div&gt;
+      &lt;i&gt;Write a CSV string. Click the table button. The program outputs a table with the specified data.&lt;/i&gt;
+    &lt;/div&gt;
+    &lt;table&gt;
+      &lt;tr&gt;
+        &lt;th&gt;CSV string:&lt;/th&gt; &lt;!-- autofocus attribute is HTML5 --&gt;
+        &lt;td&gt;&lt;textarea autofocus cols = "80" rows = "5" id="original"&gt;&lt;/textarea&gt;&lt;/td&gt; 
+      &lt;/tr&gt;
+    &lt;/table&gt;
+    &lt;button type="button"&gt;table:&lt;/button&gt;&lt;br&gt;
+    &lt;span class="output" id="finaltable"&gt;&lt;/span&gt;
+  &lt;/body&gt;
+&lt;/html&gt;
+</PRE>
+
+<P>
+
+<H4><A NAME="SECTION04140060000000000000">
 Tareas</A>
 </H4>
   
@@ -546,19 +583,19 @@ Tareas</A>
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html982"
+<A NAME="tex2html983"
   HREF="node12.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html976"
+<A NAME="tex2html977"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html970"
+<A NAME="tex2html971"
   HREF="node10.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html978"
+<A NAME="tex2html979"
   HREF="node90.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html980"
+<A NAME="tex2html981"
   HREF="node93.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -598,11 +635,11 @@ Tareas</A>
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html983"
+<B> Sig:</B> <A NAME="tex2html984"
   HREF="node12.html">Comentarios y Consejos</A>
-<B>Sup:</B> <A NAME="tex2html977"
+<B>Sup:</B> <A NAME="tex2html978"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html971"
+<B> Ant:</B> <A NAME="tex2html972"
   HREF="node10.html">Práctica: Conversor de Temperaturas</A>
 </DIV>
 <!--End of Navigation Panel-->
